tests/e2e/semantics/head_const_output10.error
Error: syntax error in story at line 3, column 8

3|           comment = "foobar"
             ^^^^^^^^^^^^^^^^^^

E0100: Can't assign `string` to `Map[any,any]`
