tests/e2e/semantics/head_const_output10.story
when http server listen method:"post" path:"/foo" as res
       comment = res.body
       comment = "foobar"
